# post-app

frontend/: package-lock.json  package.json  rspack.config.ts  tsconfig.json
frontend/src/: App.tsx
frontend/src/components/post/: index.tsx
frontend/src/models/post/: index.ts  types.ts
frontend/src/models/post/model/: post.ts
frontend/src/services/posts/: client.ts  index.ts  types.ts
frontend/src/views/wall/: index.ts
frontend/src/views/wall/ui/: index.tsx
service/: Cargo.toml
service/migrations/: 20250308205436_posts.sql
service/src/: db.rs  main.rs  state.rs
service/src/dto/: posts.rs
service/src/handlers/: mod.rs  posts.rs
service/src/models/: posts.rs
service/src/repositories/: posts.rs
service/src/use_cases/: posts.rs
